--- a/css/style.css
+++ b/css/style.css
@@ -77,11 +77,34 @@ section{
     margin-left: 50px;
 }
 
+.right h2 {
+    color: orangered;
+    margin-top: none;
+}
+
 .skill {
     display: flex;
     margin-top: 30px;
 }
+
+.skill .fa-brands.fa-js {
+    font-size: 60px;
+}
+
+.skill .fa-brands.fa-react {
+    font-size: 60px;
+}
+
+.skill .fa-brands.fa-node {
+    font-size: 60px;
+}
+
+.skill p {
+    margin-right: 15px;
+}
+
 .social-media i {
-    margin-right: 20px;
+    margin-right: 15px;
     font-size: 30px;
+    cursor: pointer;
 }
