--- a/css/contact.css
+++ b/css/contact.css
@@ -22,7 +22,7 @@ label {
 input,
 select,
 textarea {
-    background-color: #dfdede;
+    background-color: #fff;
     width: 100%;
     padding: 10px;
     margin-top: 5px;
@@ -30,46 +30,56 @@ textarea {
     border: 1px solid #dbdbdb;
 }
 
+.button-container {
+    text-align: right;
+    display: flex;
+    justify-content: end;
+}
+
 button {
-    background-color: orangered;
+    background-color: #1E3050;
     color: white;
     padding: 6px 25px;
     border-radius: 15px;
     margin-top: 20px;
-    font-size: 15px;
+    font-size: 17px;
     cursor:pointer;
+    border: 0px;
+    text-align: right;
+    display: flex;
+    justify-content: end;
 }
 
 button:hover {
     background-color: black
 }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 900px) {
     .contact-me {
-        display: flex;
-        flex-direction: column;
         align-items: center;
-        width: 0%;
+    }
+    .contact-me .container-contact form {
+        width: 400px;
+        margin-left: 200px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .nav-right i {
+        margin-right: -60px;
+        margin-bottom: 22px;
     }
     .nav-right button i {
-        margin-right: -20px;
-        margin-bottom: 20px;
-        font-size: 28px;
-    }
-
-    .contact-me .container-contact {
-        flex: 100%;
-        margin-top: -50px;
-        margin-right: 20px;
-        flex-direction: column;
-        align-items: center;
+        font-size: 27px;
     }
 
     .contact-me .container-contact form {
-        width: 100%;
-        height: auto;
-        margin-left: 200px;
+        width: 85%;
+        margin: auto;
+        margin-bottom: 5px;
     }
 
-  
+    .button-container {
+        margin-top: -10px;
+    }
 }
