--- a/css/my-project.css
+++ b/css/my-project.css
@@ -121,11 +121,11 @@
 }
 
 .project-form form button {
-    margin-top: 30px;
-    padding: 10px 20px;
+    margin-top: 15px;
+    padding: 6px 25px;
     font-size: 17px;
-    background-color: #ec4d37;
-    border-radius: 10px;
+    background-color: #1E3050;
+    border-radius: 15px;
     border: none;
     color: #fff;
     cursor: pointer;
@@ -155,7 +155,7 @@
     width: 300px;
     box-shadow: 2px 2px 2px 2px #ddd;
     align-items: center;
-    padding: 10px;
+    padding: 15px;
     border-radius: 10px;
 }
 
@@ -215,120 +215,7 @@
     font-size: 30px;
 }
 
-
-
-
-
-/* project detail */
-
-.project-detail .project-detail-container h1 {
-    text-align: center;
-    margin-bottom: 50px;
-    font-weight: bold;
-}
-
-.project-detail .project-detail-container .detail-content .content-primary {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    justify-content: center;
-    align-items: center;
-    margin: 50px 0px 20px 200px;
-    grid-gap: 50px;
-}
-
-.project-detail .project-detail-container .detail-content .content-primary .sider table {
-  margin-top: -130px;
-
-}
-
-table .test1, .test2, .test3, .test4, .test6 {
-    display: inline-block;
-    position: relative;
-    top: -3px;
-    margin-left: 10px;
-}
-
-table .test5 {
-    display: inline-block;
-    position: relative;
-    top: -3px;
-    left: 3px;
-    margin-left: 10px;
-}
-
-table i {
-    font-size: 28px;
-    font-weight: bold;
-}
-
-table th {
-    text-align: left;
-}
-
-table td {
-    color: #888688;
-    font-weight: bold;
-}
-
-table .tanggal {
-    position: relative;
-    top: -20px;
-}
-
-table .durasi {
-    position: relative;
-    top: -10px;
-}
-
-.project-detail {
-    display: flex;
-    justify-content: center;
-}
-
-.project-detail-container {
-    width: 80%;
-    margin: 40px 0;
-}
-
-.project-detail-container img {
-    width: 100%;
-}
-
-.project-detail-container h1{
-    font-style: normal;
-    font-weight: 800;
-    font-size: 45px;
-    line-height: 120%;
-    margin-bottom: 15px;
-}
-
-.project-detail-container p {
-    margin-top: 40px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 140%;
-    text-align: justify;
-}
-
-.project-detail .project-detail-container .detail-content .content-primary img {
-    width: 100%;
-    object-fit: cover;
-
-}
-
-.project-detail .project-detail-container .detail-content p {
-    margin: 60px 198px 90px 198px;
-    text-align: justify;
-
-}
-
-.project-detail-container {
-    width: 100%;
-    margin: 40px 0;
-}
-
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 900px) {
     .project {
         flex-direction: column;
         align-items: center;
@@ -342,13 +229,13 @@ table .durasi {
     .grid {
         display: grid;
         grid-template-columns: repeat(2,0fr);
-        margin: 20px 5px 20px 25px;
+        margin: 20px 0px 20px 100px;
         align-items: center;
-        grid-gap: 15px;
+        grid-gap: 20px;
     }
 
     .grid article {
-        width: 150px;
+        width: 270px;
     }
 
     .project-content h1 a {
@@ -377,42 +264,23 @@ table .durasi {
         font-size: 10px;
         padding: 5px 10px;
      }
+    
+}
 
-     .project-detail .project-detail-container .detail-content .content-primary {
-        grid-template-columns: repeat (1,1fr);
-        margin: 50px 0px 20px 40px;
-        grid-gap: 170px;
-     }
-
-     .detail-content .content-primary img{
-        width: 345px;
-        height: 200px;
-     }
-
-     .project-detail .project-detail-container .detail-content p {
-        margin: 60px 10px 90px 12px;
-        width: 340px;
-        text-align: justify;
-
-    }
-
-    .project-detail-container {
-        width: 90%;
-        margin: 40px 0;
-        text-align: center;
-    }
-
-    .project-detail-container img {
-        text-align: center;
-    }
-
-    .project-detail .project-detail-container h1 {
-        text-align: center;
-        font-size: 20px;
-        margin-left: 45px;
-        margin-right: 0px;
-        margin-bottom: 50px;
-        font-weight: bold;
+@media only screen and (max-width: 500px) {
+    .section-project .project-list-item {
+        margin: 20px 0px 20px 50px;
     }
     
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(1,2fr);
+        align-items: center;
+        margin: auto;
+        grid-gap: 20px;
+    }
+
+    .grid article {
+        width: 80%;
+    }
 }
