--- a/Not used/my-project.css
+++ b/Not used/my-project.css
@@ -275,6 +275,10 @@
 }
 
 @media only screen and (max-width: 550px) {
+    .project-form .form-container {
+        width: 100%;
+    }
+    
     .section-project .project-list-item {
         margin: 20px 0px 20px 50px;
     }
