--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -1,53 +1,13 @@
-.container-testi {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 50px 30px 20px 30px;
+.testi .card {
+    margin: 0 15px 20px 20px; 
+    box-shadow: 0 0 10px rgba(0,0,0);
 }
-
-.testi {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 30px;
-    width: 100%;
-}
-
-.testi-card {
-    width: 25%;
-    margin: 0 15px 20px 20px;
-    padding: 15px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0)
-}
-
-.testi-card img {
+.testi .card img {
     height: 200px;
-    width: 100%;
-    object-fit: cover;
-}
-
-.quote-testi {
-    font-size: 16px;
-    font-style: italic;
-    line-height: 1.5;
-    margin-bottom: 12px;
-}
-
-.author-testi {
-    font-weight: bold;
-    text-align: right;
-    margin-bottom: 5px;
 }
 
 .author-testi i {
     color: goldenrod;
-}
-
-.container-rating {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .rating-btn {
@@ -71,14 +31,14 @@ button:hover {
 }
 
 @media only screen and (max-width: 1200px) {
-    .testi-card {
+    .card {
         width: 50%
     }
 }
 
 @media only screen and (max-width: 550px) {
-    .testi-card {
-        width: 70%;
+    .card {
+        width: 100%;
         margin-top: -10px;
     }
     .rating-btn {
